Fix for bug 386189 (Cursor navigation by keyboard (arrow keys) does not work on designMode (including composer)). r/sr=jst